--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,5 @@
 @import './partials/mixins.scss';
 @import './partials/bottoni.scss';
 @import './partials/animazioni.scss';
-@import'./partials/header.scss'
+@import'./partials/header.scss';
+@import './partials/gallery'
