--- a/scss/partials/_colori.scss
+++ b/scss/partials/_colori.scss
@@ -1,5 +1,8 @@
 $text-color : #f4f4f4;
-$button-first-color: #0e6cff;
-$button-second-color: #ff8700;
-$button-third-color: #4caf50;
 $bg_hero-color: #640fc5; 
+
+$btn-col-map: (
+  '1' : #0e6cff,
+  '2' : #ff8700,
+  '3' : #4caf50,
+);
