--- a/scss/partials/_font.scss
+++ b/scss/partials/_font.scss
@@ -1,19 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&display=swap');
 
 $font-sizes-map: (
-    '1' : 3.815rem,
-    '2' : 3.052rem,
-    '3' : 2.441rem,
-    '4' : 1.953rem,
-    '5' : 1.563rem,
-    '6' : 1.25rem,
-    'p' : 1rem,
-    'small': 0.8rem,
-    'x-small' : 0.64,
+  '1' : 3.815rem,
+  '2' : 3.052rem,
+  '3' : 2.441rem,
+  '4' : 1.953rem,
+  '5' : 1.563rem,
+  '6' : 1.25rem,
+  'p' : 1rem,
+  'small': 0.8rem,
+  'x-small' : 0.64rem,
 );
 
 @each $size, $value in $font-sizes-map {
-    .text-#{$size} {
-      font-size: $value;
-    }
+  .text-#{$size} {
+    font-size: $value;
   }
+}
+
+@mixin HeadingStyle() {
+  @extend .text-1;
+  font-weight: bold; 
+}
+
+
