--- a/scss/style.css
+++ b/scss/style.css
@@ -12,7 +12,7 @@ ul {
   padding: 0;
 }
 
-.text-1 {
+.text-1, h1 {
   font-size: 3.815rem;
 }
 
@@ -45,18 +45,153 @@ ul {
 }
 
 .text-x-small {
-  font-size: 0.64;
+  font-size: 0.64rem;
+}
+
+.pi-sm, button {
+  padding-inline: 8px;
+}
+
+.pb-sm, button {
+  padding-block: 8px;
+}
+
+.mi-sm {
+  margin-inline: 8px;
+}
+
+.mb-sm {
+  margin-block: 8px;
+}
+
+.pi-normal {
+  padding-inline: 16px;
+}
+
+.pb-normal {
+  padding-block: 16px;
+}
+
+.mi-normal {
+  margin-inline: 16px;
+}
+
+.mb-normal {
+  margin-block: 16px;
+}
+
+.pi-md {
+  padding-inline: 24px;
+}
+
+.pb-md {
+  padding-block: 24px;
+}
+
+.mi-md {
+  margin-inline: 24px;
+}
+
+.mb-md {
+  margin-block: 24px;
+}
+
+.pi-lg {
+  padding-inline: 32px;
+}
+
+.pb-lg {
+  padding-block: 32px;
+}
+
+.mi-lg {
+  margin-inline: 32px;
+}
+
+.mb-lg {
+  margin-block: 32px;
+}
+
+.pi-xl {
+  padding-inline: 40px;
+}
+
+.pb-xl {
+  padding-block: 40px;
+}
+
+.mi-xl {
+  margin-inline: 40px;
+}
+
+.mb-xl {
+  margin-block: 40px;
+}
+
+.pi-xxl {
+  padding-inline: 48px;
+}
+
+.pb-xxl {
+  padding-block: 48px;
+}
+
+.mi-xxl {
+  margin-inline: 48px;
+}
+
+.mb-xxl {
+  margin-block: 48px;
+}
+
+.bgColor-1 {
+  background-color: #0e6cff;
+}
+
+.bgColor-2 {
+  background-color: #ff8700;
+}
+
+.bgColor-3 {
+  background-color: #4caf50;
 }
 
 header {
+  font-family: "Kalnia", serif;
   background-color: #640fc5;
   color: #f4f4f4;
   display: flex;
   height: 400px;
 }
 
-img {
+header img {
   height: 400px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+h1 {
+  font-weight: bold;
+}
+
+button {
+  border: 0;
+  color: #f4f4f4;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.container > * {
+  flex: 0 0 calc(100% / 4);
+}
+
+.container img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  border: 0;
+  box-shadow: 5px 5px 23px -3 #808080;
+  border-radius: 8px;
 }/*# sourceMappingURL=style.css.map */
