--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,4 +6,5 @@
 @import './partials/bottoni.scss';
 @import './partials/animazioni.scss';
 @import'./partials/header.scss';
-@import './partials/gallery'
+@import './partials/gallery';
+@import'./partials/nav'
