--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -4,6 +4,7 @@ header{
     color: $text-color;
     display: flex;
     height: 400px;
+    @include animation('fadeInUp', 1s, '-50px', '0px', 0.5s);
 }
 header img{
     height: 400px;
