--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,4 +7,4 @@
 @import './partials/animazioni.scss';
 @import'./partials/header.scss';
 @import './partials/gallery';
-@import'./partials/nav'
+@import'./partials/nav';
